test/Harper/Tests/Good/issue016_ifElseDefiniteAssignment1.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  
  if (n == 42) {
    x := n;
  }
  else {
    x := 0;
  }

  (result :: Integer) = x + n;
  return result;
};

main :: Integer;
main = f 42;