test/Harper/Tests/Bad/NonBoolPredicate_While.har
f :: Integer -> Integer;
f n = {
  while 1 {
    return n;
  }
  return 0;
};

main :: Integer;
main = f 42;